<?xml version="1.0"?>

<package format="3">
  <name>sonar_oculus</name>
  <version>1.0.0</version>
  <description> sonar_oculus package, containing Low Level driver code and ROS driver code to connect and communicate with the sonar</description>
  <license>Apache-2.0</license>
  <maintainer email="puglisialessandro27@gmail.com">Alessandro Puglisi</maintainer>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>OpenCV</depend>
  <depend>sonar_oculus_interface</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
